edit settings for high audio quality

--- a/murmur/murmur.ini
+++ b/murmur/murmur.ini
@@ -108,7 +108,7 @@ icesecretwrite=
 ; Welcome message sent to clients when they connect.
 ; If the welcome message is set to an empty string,
 ; no welcome message will be sent to clients.
-welcometext="<br />Welcome to this server running <b>Murmur</b>.<br />Enjoy your stay!<br />"
+welcometext="Welcome to Maxime's Mumble server."
 
 ; Port to bind TCP and UDP sockets to.
 port=64738
@@ -118,11 +118,11 @@ port=64738
 ;host=
 
 ; Password to join server.
-serverpassword=
+serverpassword=PASSWORD
 
 ; Maximum bandwidth (in bits per second) clients are allowed
 ; to send speech at.
-bandwidth=72000
+bandwidth=128000
 
 ; Murmur and Mumble are usually pretty good about cleaning up hung clients, but
 ; occasionally one will get stuck on the server. The timeout setting will cause
@@ -163,7 +163,7 @@ allowping=true
 
 ; Amount of users with Opus support needed to force Opus usage, in percent.
 ; 0 = Always enable Opus, 100 = enable Opus if it's supported by all clients.
-;opusthreshold=100
+opusthreshold=0
 
 ; Maximum depth of channel nesting. Note that some databases like MySQL using
 ; InnoDB will fail when operating on deeply nested channels.
